Center Alignment for tables

--- a/css/style.css
+++ b/css/style.css
@@ -194,7 +194,7 @@ body {
 	  border-bottom: 1px solid #ddd;
 	  display: block;
 	  font-size: .8em;
-	  text-align: right;
+	  text-align: center;
 	}
 	
 	table td::before {
